[project]
name = "ignite"
version = "0.0.0"
description = "Simplified rip-off of pytorch-ignite for jax"
readme = "README.md"
requires-python ="~=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "Brian Mak", email = "bmak2@ucsc.edu"},
]
dependencies = ["jax>=0.4.13", "equinox>=0.10.11", "optax>=0.1.7"]